--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 50px;
     width: 100%;
@@ -8,6 +8,23 @@
     color: white;
     position: fixed;
     top: 0;
+    padding: 0 40px;
+}
+
+.addNew{
     padding: 10px;
-    text-decoration: underline;
+    font-size: 16px;
+    width: 10rem;
+    background-color: whitesmoke;
+    border: none;
+    border-radius: 20px;
+    color: darkcyan;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all ease-in-out 0.2s;
+}
+
+.addNew:hover{
+    background-color: gray;
+    color: aliceblue;
 }
