--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -35,3 +35,12 @@ td {
 .table button.delete {
     color: red;
 }
+
+.input{
+    height: 30px;
+    width: 60%;
+    border: 1px solid lightgray;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 16px;
+}
